@@ -400,5 +400,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 - Added check for null string in PrefixRegPath()
 - Manually generates GUID for DeskMetrics if an error occured in System.Guid
 - Fixed spelling mistake that prevented LRC to load on Lithuanian computers
+- No longer displays exception if "cmdLine" passed to ExtractArguments() is null
 
 + Version 1.5.1 Released
